fix: fix ag-grid-table background issue of track page in case of dark mode

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -186,6 +186,9 @@ h6 {
     background-color: gray !important;
     color: $light-dark-color !important;
   }
+  .ag-center-cols-viewport {
+    background-color: #181a20 !important;
+  }
   .ag-row-even {
     background-color: #181a20 !important;
     color: $light-dark-color !important;
